# ml-mcdm

./: .gitignore  ACTION_PLAN.md  AUDIT_FINDINGS.md  AUDIT_PLAN.md  AUDIT_REPORT.md  CHANGES_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  CV_FOLD_AND_OOF_DESIGN.md  IMPLEMENTATION_CHECKLIST.md  LATEX_AUDIT_REPORT.md  QUICK_PREVIEW_DELIVERY.md  QUICK_PREVIEW_MODE.md  README.md  __init__.py  _profile_out.txt  cleanup.py  config.py  conftest.py  data_loader.py  demo_quick_preview.py  final_fix.py  find_lines.py  fix_discussion.py  fix_discussion2.py  logger.py  main.aux  main.bcf  main.out  main.py  offline_rfe.py  output_manager.py  pipeline.py  pyproject.toml  pytest.ini  pytest_run.bat  rank_forecast_provinces.py  reconstruct.py  regen_figs.py  regenerate_residual_plot.py  run.py  (+11 more)
.claude/: TIER1-COMPLETION-SUMMARY.md  TIER1-IMPLEMENTATION-SUMMARY.md  fix-1-implementation-notes.md
analysis/: __init__.py  bootstrap.py  critic_sensitivity_analysis.py  critic_temporal_stability.py  ml_er_bootstrap.py  sensitivity.py  stability.py  validation.py
data/: 2011.csv  2012.csv  2014.csv  2021.csv  2022.csv  2024.csv  __init__.py  data.csv  data_loader.py  missing_data.py
data/codebook/: codebook_criteria.csv  codebook_subcriteria.csv
data/csv/: 2012.csv  2013.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2023.csv
data/imputation/: __init__.py  gan.py  iterative.py  mechanisms.py  orchestrator.py  validation.py
docs/: METHODS.md  PLAN_temporal_stability_sensitivity.md  WORKFLOW.md  dataset_description.md  enhancement_plan_config_models_figures.md  ensemble_execution_audit_plan.md  ensemble_improvement_plan.md  fix_forecasting.md  forecast.md  imputation.md  ml_performance_enhancement_plan.md  ml_recommendation.md  objective.md  oof_meta_calibration_fix_plan.md  panel_cv_audit_and_enhancement_plan.md  paper_executive_summary.tex  phase_a_adjusted_plan.md  phase_c_enhancement_plan.md  ranking.md  weighting.md  weighting_analysis_methods.md  workflow.md
evidential_reasoning/: hierarchical_er.py
forecasting/: __init__.py  augmentation.py  auto_ensemble.py  base.py  bayesian.py  catboost_forecaster.py  conformal.py  elasticnet_forecaster.py  evaluation.py  evaluation_diagnostics.py  features.py  gradient_boosting.py  hierarchical_bayes.py  hyperparameter_tuning.py  incremental_update.py  kernel_ridge.py  multiple_imputation.py  neural_additive.py  panel_mice.py  panel_var.py  persistence.py  preprocessing.py  quantile_forest.py  quick_preview.py  shift_detection.py  super_learner.py  svr.py  unified.py
loggers/: __init__.py  console_logger.py  context.py  debug_logger.py  decorators.py
mcdm/: __init__.py
mcdm/ifs/: __init__.py  base.py  ifs_copras.py  ifs_edas.py  ifs_promethee.py  ifs_saw.py  ifs_topsis.py  ifs_vikor.py
mcdm/traditional/: __init__.py  copras.py  edas.py  promethee.py  saw.py  topsis.py  vikor.py
output/: ML_Results_Report.md  Missing_Data_Handling_Report.md  __init__.py  csv_writer.py  orchestrator.py  report_writer.py
output/logs/: stage3_diagnostics.json
output/visualization/: __init__.py  base.py  forecast_plots.py  forecast_plots_backup.py  forecast_plots_phase4_facade.py  mcdm_plots.py  mcdm_ranking_figures.py  ranking_plots.py  sensitivity_plots.py  summary_plots.py  temporal_sensitivity_figures.py  weighting_plots.py
outputs/figures/: figure_manifest.json
outputs/reports/: analysis_report.txt  report.txt
outputs/results/: aggregation_metadata.json  beta_convergence.csv  config_snapshot.json  criterion_weights.csv  cv_scores.csv  execution_summary.json  feature_importance.csv  final_rankings.csv  forecast_model_weights_2025.csv  forecast_summary_2025.json  lstm_test_metrics.csv  lstm_training_history.csv  mcdm_rank_comparison.csv  mcdm_scores_C01.csv  mcdm_scores_C02.csv  mcdm_scores_C03.csv  mcdm_scores_C04.csv  mcdm_scores_C05.csv  mcdm_scores_C06.csv  mcdm_scores_C07.csv  mcdm_scores_C08.csv  mcdm_scores_detailed.csv  output_manifest.json  panel_regression_coefficients.csv  predicted_components_2025.csv  predicted_rankings_2025.csv  prediction_uncertainty_2025.csv  prediction_uncertainty_er.csv  rf_test_metrics.csv  robustness_summary.csv  rough_set_reduction.csv  sensitivity_analysis.csv  sigma_convergence.csv  stacking_performance.csv  stacking_weights.csv  weights_analysis.csv
paper/: compile_log.txt  log1.txt  log2.txt  log3.txt  main.aux  main.bbl  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc  main.xdv  xelatex_output.txt
paper/table/: criterion_weight.csv  sub_criterion_weight.csv
ranking/: __init__.py  copras.py  edas.py  hierarchical_pipeline.py  pipeline.py  promethee.py  saw.py  topsis.py  vikor.py
ranking/evidential_reasoning/: base.py  hierarchical_er.py
result/logs/: debug_20260304_112551.json  debug_20260304_154709.json
src/: __init__.py  config.py  data_loader.py  logger.py  main.py  output_manager.py  pipeline.py  visualization.py
tests/: conftest.py  test_advanced_imputation.py  test_core.py  test_critic_weighting_sensitivity.py  test_critic_weighting_temporal.py  test_e2e_phase2_integration.py  test_early_stopping.py  test_evidential_reasoning.py  test_forecast_viz_contracts.py  test_forecast_viz_metrics.py  test_forecast_viz_regression.py  test_forecast_viz_smoke.py  test_forecasting.py  test_hyperparameter_tuning.py  test_mcdm_ifs.py  test_mcdm_textbook.py  test_mcdm_traditional.py  test_missing_data.py  test_output.py  test_phase4_compat.py  test_phase4_integration.py  test_pipeline_forecasting_integration.py  test_ranking_pipeline_nan.py  test_sensitivity.py  test_tier2_data_consistency.py  test_validation.py  test_weighting.py
visualization/: __init__.py  base.py  forecast_plots.py  mcdm_plots.py  ranking_plots.py  sensitivity_plots.py  summary_plots.py  weighting_plots.py
weighting/: __init__.py  adaptive.py  base.py  bootstrap.py  critic.py  critic_weighting.py  entropy.py  fusion.py  hybrid_weighting.py  merec.py  normalization.py  standard_deviation.py  validation.py
(+178 files in other folders)
