[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "ml-mcdm"
version = "4.0.0"
description = "Advanced Machine Learning Enhanced Multi-Criteria Decision Making Framework with 10 MCDM Methods, Time-Series Forecasting, and Robust Ensemble Aggregation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Son Hoang", email = "sonhoang.NK@outlook.com"}
]
maintainers = [
    {name = "Son Hoang", email = "sonhoang.NK@outlook.com"}
]
keywords = [
    "MCDM",
    "multi-criteria decision making",
    "machine learning",
    "time-series forecasting",
    "fuzzy logic",
    "decision support",
    "TOPSIS",
    "VIKOR",
    "PROMETHEE",
    "COPRAS",
    "EDAS",
    "ensemble methods",
    "rank aggregation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies
dependencies = [
    "numpy>=1.21.0",  # Core numerical library
    "pandas>=1.3.0",  # Data manipulation
    "scipy>=1.7.0",   # Scientific computing
    "scikit-learn>=1.0.0",  # ML algorithms
    "matplotlib>=3.4.0",    # Plotting
    "seaborn>=0.11.0",      # Statistical plots
    "typing-extensions>=4.0.0",    # Typing support
    "joblib>=1.0.0",               # Parallel processing
    "tqdm>=4.0.0",                 # Progress bars
    "packaging>=21.0.0",           # Package utilities
    "pillow>=8.0.0",               # Image processing
    "openpyxl>=3.0.0",             # Excel support
    "statsmodels>=0.13.0",         # Statistical models
]

[project.optional-dependencies]

# Optional extras for flexibility
dev = [
    "pytest>=8.0.0",         # Testing framework
    "pytest-cov>=4.1.0",     # Coverage
    "pytest-xdist>=3.5.0",   # Parallel testing
    "black>=24.0.0",         # Code formatting
    "flake8>=7.0.0",         # Linting
    "isort>=5.13.0",         # Import sorting
    "mypy>=1.8.0",           # Type checking
    "pylint>=3.0.0",         # Static analysis
]
ml = [
    "tensorflow>=2.10.0",  # Deep learning
    "keras>=2.10.0",       # Neural networks
    "xgboost>=1.7.0",      # Gradient boosting
    "lightgbm>=3.3.0",     # LightGBM
]
analysis = [
    "shap>=0.42.0",                # Explainability
    "plotly>=5.0.0",               # Interactive plots
    "jupyter>=1.0.0",              # Notebooks
    "ipykernel>=6.0.0",            # Jupyter kernel
    "pillow>=8.0.0",               # Image processing
    "openpyxl>=3.0.0",             # Excel support
    "statsmodels>=0.13.0",         # Statistical models
    "tqdm>=4.0.0",                 # Progress bars
    "joblib>=1.0.0",               # Parallel processing
]
forecasting = [
    "optuna>=3.0.0",        # Hyperparameter optimization
    "mapie>=0.6.0",         # Conformal prediction
]
all = [
    "ml-mcdm[dev,ml,analysis,forecasting]",
]

[project.urls]
Homepage = "https://github.com/hnks-gh/ml-mcdm"
Documentation = "https://github.com/hnks-gh/ml-mcdm/blob/main/README.md"
Repository = "https://github.com/hnks-gh/ml-mcdm"
Issues = "https://github.com/hnks-gh/ml-mcdm/issues"
Changelog = "https://github.com/hnks-gh/ml-mcdm/blob/main/CHANGELOG.md"

# Add more URLs if needed

[tool.setuptools]
packages = ["ml_mcdm"]
package-dir = {"ml_mcdm" = "."}
zip-safe = false

# Include additional package data

[tool.setuptools.package-data]
"ml_mcdm" = ["*.csv", "*.json", "*.md", "*.txt", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | outputs
)/
'''

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*", "result/*", ".venv/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^result/",
    "^\\.venv/",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "W0212",  # Access to protected member
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
]
norecursedirs = ["__pycache__", ".git", "ml_mcdm.egg-info", "result"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "fuzzy: marks tests for fuzzy MCDM methods",
    "ml: marks tests for machine learning components",
    "ensemble: marks tests for ensemble methods",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "result/*",
    "ml_mcdm.egg-info/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
